modified the files

--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Prologue by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Prologue by HTML5 UP</title>
+		<title>Adewale Shelby</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="preconnect" href="https://fonts.gstatic.com">
@@ -157,9 +152,9 @@
 
 							<p>
 								I have a Bachelor's degree in Geology and Mineral Sciences. I started working with websites when i was about 13 years old. 
-								I created my first blogspot using BLOGGER when i was 15. I decided to dive deeper into web development in 2019 and i have managed to acquire 
-								some valuabe skills and languages. I obtained a certification in Digital Marketing in 2019. Over the years i had ventured into e-commerce, 
-								i started a dropshipping and POD business with shopify briefly. I have experiences with the following:
+								I created my first blogspot using BLOGGER when I was 15. I decided to dive deeper into web development in 2019 and I have managed to acquire 
+								some valuabe skills and languages. I obtained a certification in Digital Marketing in 2019. Over the years I had ventured into e-commerce, 
+								I started a dropshipping and POD business with shopify briefly. I have experiences with the following:
 							</p>
 								
 							<i class="fab fa-html5"></i>
